<?xml version="1.0"?>
<package format="2">
  <name>arcam</name>
  <version>0.0.0</version>
  <description>The arcam package</description>

  <maintainer email="johntgz@nus.edu.sg">John Tan </maintainer>

  <license>MIT</license>

  <author email="johntgz@nus.edu.sg">John Tan</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <depend>tf2_ros</depend> 

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
